--- a/templates/pages/footer1.html
+++ b/templates/pages/footer1.html
@@ -33,7 +33,8 @@
 {{/*                </div>*/}}
 {{/*            </div>*/}}
 {{/*            <div class="ui inverted section divider"></div>*/}}
-            <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 Like.本站博客未经授权禁止转载. Powered by Golang. </p>
+            <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 Like.本站博客未经授权禁止转载. Powered by Golang.</p>
+            <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://beian.miit.gov.cn" target="_blank"> 冀ICP备20018381号</a></p>
         </div>
 
     </footer>
