--- a/templates/pages/footer1.html
+++ b/templates/pages/footer1.html
@@ -2,39 +2,47 @@
     <!--底部footer-->
     <footer class="ui inverted vertical segment m-padded-tb-massive">
         <div class="ui center aligned container">
-{{/*            <div class="ui inverted divided stackable grid">*/}}
-{{/*                <div class="three wide column">*/}}
-{{/*                    <div class="ui inverted link list">*/}}
-{{/*                        <div class="item">*/}}
-{{/*                            <img src="/static/images/wechat.jpg" class="ui rounded image" alt=""*/}}
-{{/*                                 style="width: 110px">*/}}
-{{/*                        </div>*/}}
-{{/*                    </div>*/}}
-{{/*                </div>*/}}
-{{/*                <div class="three wide column">*/}}
-{{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced">最新动态</h4>*/}}
-{{/*                    <div class="ui inverted link list">*/}}
-{{/*                        <a href="#" class="item m-text-thin">2020.7月正式建成</a>*/}}
-{{/*                        <a href="#" class="item m-text-thin">目前正处于完善阶段</a>*/}}
-{{/*                        <a href="#" class="item m-text-thin">欢迎大家提宝贵意见</a>*/}}
-{{/*                    </div>*/}}
-{{/*                </div>*/}}
-{{/*                <div class="three wide column">*/}}
-{{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>*/}}
-{{/*                    <div class="ui inverted link list">*/}}
-{{/*                        <a href="#" class="item m-text-thin">{{.user.UserEmail}}</a>*/}}
-{{/*                        <a href="#" class="item m-text-thin">QQ：535889315</a>*/}}
-{{/*                    </div>*/}}
-{{/*                </div>*/}}
-{{/*                <div class="seven wide column">*/}}
-{{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>*/}}
-{{/*                    <p class="m-text-thin m-text-spaced m-opacity-mini">*/}}
-{{/*                        这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>*/}}
-{{/*                </div>*/}}
-{{/*            </div>*/}}
-{{/*            <div class="ui inverted section divider"></div>*/}}
-            <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 Like.本站博客未经授权禁止转载. Powered by Golang.</p>
-            <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://beian.miit.gov.cn" target="_blank"> 冀ICP备20018381号</a></p>
+            {{/*            <div class="ui inverted divided stackable grid">*/}}
+            {{/*                <div class="three wide column">*/}}
+            {{/*                    <div class="ui inverted link list">*/}}
+            {{/*                        <div class="item">*/}}
+            {{/*                            <img src="/static/images/wechat.jpg" class="ui rounded image" alt=""*/}}
+            {{/*                                 style="width: 110px">*/}}
+            {{/*                        </div>*/}}
+            {{/*                    </div>*/}}
+            {{/*                </div>*/}}
+            {{/*                <div class="three wide column">*/}}
+            {{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced">最新动态</h4>*/}}
+            {{/*                    <div class="ui inverted link list">*/}}
+            {{/*                        <a href="#" class="item m-text-thin">2020.7月正式建成</a>*/}}
+            {{/*                        <a href="#" class="item m-text-thin">目前正处于完善阶段</a>*/}}
+            {{/*                        <a href="#" class="item m-text-thin">欢迎大家提宝贵意见</a>*/}}
+            {{/*                    </div>*/}}
+            {{/*                </div>*/}}
+            {{/*                <div class="three wide column">*/}}
+            {{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>*/}}
+            {{/*                    <div class="ui inverted link list">*/}}
+            {{/*                        <a href="#" class="item m-text-thin">{{.user.UserEmail}}</a>*/}}
+            {{/*                        <a href="#" class="item m-text-thin">QQ：535889315</a>*/}}
+            {{/*                    </div>*/}}
+            {{/*                </div>*/}}
+            {{/*                <div class="seven wide column">*/}}
+            {{/*                    <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>*/}}
+            {{/*                    <p class="m-text-thin m-text-spaced m-opacity-mini">*/}}
+            {{/*                        这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>*/}}
+            {{/*                </div>*/}}
+            {{/*            </div>*/}}
+            {{/*            <div class="ui inverted section divider"></div>*/}}
+            <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 Like. Powered by
+                Golang.|
+            <a href="http://beian.miit.gov.cn" target="_blank">
+                    冀ICP备20018381号</a>
+{{/*                |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13068302000064"*/}}
+{{/*                   style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img*/}}
+{{/*                            src="/static/images/备案图标.png" style="float:left;"/>冀公网安备13068302000064号</a>*/}}
+            </p>
+
+
         </div>
 
     </footer>
