修改部分内容

--- a/templates/pages/archives.html
+++ b/templates/pages/archives.html
@@ -28,9 +28,9 @@
                                 <a href="/types/{{$type.TypeName}}/{{$blog.Id}}" target="_blank" class="item">
           <span>
             <i class="mini teal circle icon"></i>{{$blog.Title}}
-            <div class="ui teal basic left pointing label m-padded-mini ">{{$blog.Month}}.{{$blog.Day}}</div>
+{{/*            <div class="ui teal basic left pointing label m-padded-mini ">{{$blog.Month}}.{{$blog.Day}}</div>*/}}
           </span>
-                                    <div class="ui orange basic left pointing label m-padded-mini ">{{$blog.Flag}}</div>
+                                    <div class="ui orange basic left pointing label m-padded-mini ">{{$blog.Month}}.{{$blog.Day}}</div>
                                 </a>
 
 
