--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -128,7 +128,7 @@
                     <!--标签-->
                     <div class="ui segments m-margin-top-large">
                         <div class="ui secondary segment ">
-                            <i class="tags icon"></i>随机分类
+                            <i class="tags icon"></i>随机标签
                         </div>
                         <div class="ui attached segment">
                             {{range $index,$rand2 :=.tag}}
