--- a/templates/pages/footer1.html
+++ b/templates/pages/footer1.html
@@ -7,7 +7,7 @@
             {{/*                    <div class="ui inverted link list">*/}}
             {{/*                        <div class="item">*/}}
             {{/*                            <img src="/static/images/wechat.jpg" class="ui rounded image" alt=""*/}}
-            {{/*                                 style="width: 110px">*/}}
+            {{/*                                 style1="width: 110px">*/}}
             {{/*                        </div>*/}}
             {{/*                    </div>*/}}
             {{/*                </div>*/}}
@@ -38,8 +38,8 @@
             <a href="http://beian.miit.gov.cn" target="_blank">
                     冀ICP备20018381号</a>
 {{/*                |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13068302000064"*/}}
-{{/*                   style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img*/}}
-{{/*                            src="/static/images/备案图标.png" style="float:left;"/>冀公网安备13068302000064号</a>*/}}
+{{/*                   style1="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img*/}}
+{{/*                            src="/static/images/备案图标.png" style1="float:left;"/>冀公网安备13068302000064号</a>*/}}
             </p>
 
 
