--- a/templates/style1/sidebarabout.html
+++ b/templates/style1/sidebarabout.html
@@ -74,7 +74,7 @@
 
 
         {{/*        二维码*/}}
-        <div>
+        <div class="visible-lg">
             <h4 class="" align="center">扫码关注我</h4>
             <div align="center"><img src="/static/images/wechat.jpg" width="200" alt=""></div>
         </div>
