--- a/templates/style1/footer.html
+++ b/templates/style1/footer.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-sm-12 col-md-4 footer-col"></div>
 
-            <div class="col-sm-12 col-md-4 footer-col">
+            <div class="col-sm-12 col-md-4 footer-col visible-lg">
                 <h3>骄傲地使用</h3>
                 <p>
 
