--- a/templates/style1/index.html
+++ b/templates/style1/index.html
@@ -36,7 +36,8 @@
                             </a>
                             <p class="article-info">
                                 {{$blog.UpdateTime}} · 阅读 {{$blog.Numb}}
-                                · <span class="glyphicon glyphicon-folder-close"></span> <a href="/types/{{$blog.TypeName}}">{{$blog.TypeName}}</a>
+                                · <span class="glyphicon glyphicon-folder-close"></span> <a
+                                        href="/types/{{$blog.TypeName}}">{{$blog.TypeName}}</a>
                             </p>
                             <p class="article-desc">
                                 {{$blog.Description}}
@@ -62,7 +63,7 @@
 
             </div><!-- /.blog-main -->
 
-            {{template "sidebarindex".}}
+                {{template "sidebarindex".}}
 
         </div><!-- /.row -->
 
