--- a/templates/style1/sidebarnote.html
+++ b/templates/style1/sidebarnote.html
@@ -1,5 +1,5 @@
 {{define "sidebarnote"}}
-    <div class="col-sm-12 col-md-4 blog-sidebar">
+    <div class="col-sm-12 col-md-4 blog-sidebar visible-lg">
         <div class="sidebar-module" id="about_me">
             <div class="sidebar-inner">
                 <section class="site-overview sidebar-panel  sidebar-panel-active ">
