--- a/templates/style1/bar.html
+++ b/templates/style1/bar.html
@@ -2,8 +2,9 @@
     <div class="container">
         <nav class="blog-nav">
             <a class="blog-nav-item {{.active1}}" href="/">首页</a>
-            <a class="blog-nav-item {{.active5}}" href="/about">关于我</a>
             <a class="blog-nav-item {{.active6}}" href="/notes">叨吧叨</a>
+            <a class="blog-nav-item {{.active5}}" href="/about">关于我</a>
+            <a class="blog-nav-item {{.active4}}" href="/archives">归档</a>
         </nav>
     </div>
 {{end}}
