--- a/templates/style1/sidebarindex.html
+++ b/templates/style1/sidebarindex.html
@@ -1,5 +1,5 @@
 {{define "sidebarindex"}}
-    <div class="col-sm-12 col-md-4 blog-sidebar visible-lg">
+    <div class="col-sm-12 col-md-4 col-lg-8 blog-sidebar  visible-lg">
         <div class="sidebar-module" id="about_me">
             <div class="sidebar-inner">
                 <section class="site-overview sidebar-panel  sidebar-panel-active ">
@@ -168,7 +168,7 @@
             </div>
         </div>
         {{/*        二维码*/}}
-        <div>
+        <div class="visible-lg">
             <h4 class="" align="center">扫码关注我</h4>
             <div align="center"><img src="/static/images/wechat.jpg" width="200" alt=""></div>
         </div>
