--- a/templates/style1/index.html
+++ b/templates/style1/index.html
@@ -25,7 +25,45 @@
 
         <div class="row">
 
-            <div class="col-sm-12 col-md-8 blog-main content">
+{{/*            总结*/}}
+            <div class="col-sm-12 col-md-12">
+                <div class="sidebar-module hidden-lg">
+                    <div class="card">
+                        <section class="site-overview sidebar-panel  sidebar-panel-active ">
+
+                            <nav class="site-state motion-element">
+                                <div class="site-state-item site-state-posts">
+                                    <a href="#">
+                                        {{$sumnub2:=SUMBlog}}
+                                        <span class="site-state-item-count">{{$sumnub2}}</span>
+                                        <span class="site-state-item-name">文章</span>
+                                    </a>
+                                </div>
+
+                                <div class="site-state-item site-state-tags">
+                                    <a href="#">
+                                        {{$sumnub3:=NewBlog}}
+                                        <span class="site-state-item-count">{{$sumnub3}}</span>
+                                        <span class="site-state-item-name">今日更新</span>
+                                    </a>
+                                </div>
+
+                                <div class="site-state-item site-state-categories">
+                                    <a href="#">
+                                        {{$sumnub1:=SUMBlogNUM}}
+                                        <span class="site-state-item-count">{{$sumnub1}}</span>
+                                        <span class="site-state-item-name">浏览</span>
+                                    </a>
+                                </div>
+
+                            </nav>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
+
+
                 {{range $index,$blog:=.blog}}
                     <div class="media card" style="margin-bottom: 15px;">
                         <div class="media-body">
@@ -63,7 +101,7 @@
 
             </div><!-- /.blog-main -->
 
-                {{template "sidebarindex".}}
+            {{template "sidebarindex".}}
 
         </div><!-- /.row -->
 
