--- a/templates/style1/research.html
+++ b/templates/style1/research.html
@@ -2,7 +2,7 @@
 <div class="search_wrap">
     <div style="margin-top: 15px;">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="时光..." id="search_input">
+            <input type="text" class="form-control" placeholder="找找看..." id="search_input">
             <span class="input-group-btn">
 							<button class="btn btn-info" type="button" id="search_btn">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
