优化手机UI显示

--- a/templates/style1/sidebarabout.html
+++ b/templates/style1/sidebarabout.html
@@ -7,7 +7,7 @@
 
                     <nav class="site-state motion-element">
                         <div class="site-state-item site-state-posts">
-                            <a href="#">
+                            <a href="/archives">
                                 {{$sumnub2:=SUMBlog}}
                                 <span class="site-state-item-count">{{$sumnub2}}</span>
                                 <span class="site-state-item-name">文章</span>
