--- a/templates/style1/tag.html
+++ b/templates/style1/tag.html
@@ -25,7 +25,7 @@
         <div class="row">
             {{$name :=.user.Name}}
             {{$head :=.user.UserImg}}
-            <div class="col-sm-12 col-md-8 blog-main content">
+            <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
                 {{range $index,$blog:=.blog}}
                     <div class="media card" style="margin-bottom: 15px;">
                         <div class="media-body">
