--- a/templates/style1/blog.html
+++ b/templates/style1/blog.html
@@ -42,7 +42,7 @@
 
     <div class="row">
 
-        <div class="col-sm-12 col-md-8 blog-main content">
+        <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
             <div class="article-content card">
 
                 {{.content}}
