--- a/templates/style1/note.html
+++ b/templates/style1/note.html
@@ -25,7 +25,7 @@
 
         <div class="row">
 
-            <div class="col-sm-12 col-md-8 blog-main content">
+            <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
                 {{range $index,$blog:=.types}}
                     {{$content:=safe $blog.Description}}
                     <div class="media card" style="margin-bottom: 15px;">
