--- a/templates/style1/researcher.html
+++ b/templates/style1/researcher.html
@@ -24,7 +24,7 @@
 
         <div class="row">
 
-            <div class="col-sm-12 col-md-8 blog-main content">
+            <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
                 {{range $index,$blog:=.blog}}
                     <div class="media card" style="margin-bottom: 15px;">
                         <div class="media-body">
