--- a/templates/style1/about.html
+++ b/templates/style1/about.html
@@ -27,7 +27,7 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
-            <div class="article-content card">
+            <div class="article-content card" id="content">
 
                 {{.content}}
 
