--- a/templates/style1/note.html
+++ b/templates/style1/note.html
@@ -31,7 +31,7 @@
                     <div class="media card" style="margin-bottom: 15px;">
                         <div class="media-body">
                             <p class="article-info">{{$blog.UpdateTime}}</p>
-                            <div class="article-desc">
+                            <div class="article-desc" id="content">
                                 {{$content}}
                             </div>
                         </div>
