--- a/templates/style1/blog.html
+++ b/templates/style1/blog.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/static/lib/prism/prism.css">
     <link rel="stylesheet" href="../../static/style/2/css/blog7131.css?t=202003220918">
     <link rel="stylesheet" href="../../static/style/2/css/footerc029.css?t=201812061243">
-
+{{/*    <base target="_blank" />*/}}
     <meta name="theme-color" content="#375680">
 </head>
 
@@ -43,7 +43,7 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-12 col-lg-8 blog-main content">
-            <div class="article-content card">
+            <div class="article-content card" id="content">
 
                 {{.content}}
                 <br>
