--- a/templates/style1/tag.html
+++ b/templates/style1/tag.html
@@ -16,7 +16,7 @@
         <div class="blog-header">
             <div class="title_wrap">
                 <h1 style="font-size: 28px;">{{.name}}</h1>
-                <p class="lead blog-description">分类下相关文章</p>
+                <p class="lead blog-description">标签下相关文章</p>
             </div>
             {{template "research".}}
             <div style="clear: both;"></div>
