--- a/templates/style1/footer.html
+++ b/templates/style1/footer.html
@@ -8,7 +8,11 @@
 
                 <p>@2020 {{.user.BlogName}}</p>
                 <p>版本: 2.0</p>
-
+                <p>
+                <div class="hidden-lg" >
+                    {{template "researchphone".}}
+                </div>
+                </p>
                 <p>
                     <a href="http://beian.miit.gov.cn" rel="nofollow" target="_blank">冀ICP备20018381号</a>
                 </p>
