--- a/templates/style1/bar.html
+++ b/templates/style1/bar.html
@@ -3,11 +3,12 @@
         <nav class="blog-nav">
             <a class="blog-nav-item {{.active1}}" href="/">首页</a>
             <a class="blog-nav-item {{.active6}}" href="/notes">叨吧叨</a>
-            <a class="blog-nav-item" href="https://github.com/likewl/golang-design-pattern" target="_blank">go版本设计模式</a>
             <a class="blog-nav-item" href="/types/%e7%ae%97%e6%b3%95">算法</a>
             <a class="blog-nav-item" href="/types/TODO">TODO</a>
             <a class="blog-nav-item {{.active5}}" href="/about">关于我</a>
             <a class="blog-nav-item {{.active4}}" href="/archives">归档</a>
+            <a class="blog-nav-item" href="https://github.com/likewl/golang-design-pattern" target="_blank">go版本设计模式</a>
+            <a class="blog-nav-item" href="https://space.bilibili.com/29346549" target="_blank">B站：来自派大星的愤怒</a>
         </nav>
     </div>
 {{end}}
