--- a/templates/style1/type.html
+++ b/templates/style1/type.html
@@ -21,6 +21,7 @@
                 <span class="glyphicon glyphicon-hourglass "></span><a href="/tags/简单">简单</a>
                 <span class="glyphicon glyphicon-hourglass "></span><a href="/tags/中等">中等</a>
                 <span class="glyphicon glyphicon-hourglass "></span><a href="/tags/困难">困难</a>
+                <span class="glyphicon glyphicon-hourglass "></span><a href="/tags/剑指offer">剑指offer</a>
             </p>
             {{else}}
             <p class="lead blog-description">分类下相关文章</p>
